# terra-vigilance-predict-api

./: .dockerignore  .gitignore  Dockerfile  Pres_Hackathon_b123_Info_LYC_2024_2025.pptx  api_server.py  data.csv  dataset.csv  dataset.parquet  docker-compose.yaml  eval_columns.ipynb  lgbm_model.txt  lgbm_pipeline.pkl  models.ipynb  preprocessor.pkl  pyproject.toml  readme.md  requirements.txt  tranform.ipynb  xgb_model.json
datasets/inondation/: datasets_inondation.parquet
datasets/seisme/: datasets_seisme.parquet
