[project]
name = "challenge-48"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "jupyter>=1.1.1",
    "keras>=3.9.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "polars>=1.29.0",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.19.0",
    "uvicorn>=0.34.2",
    "xgboost>=3.0.1",
]
